Fav bus fixes when last one removed, fix AI wrapper logo img invisible

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -218,6 +218,8 @@
 
 .mx-3rem { margin-left: 3rem; margin-right: 3rem; }
 
+.mx-5rem { margin-left: 5rem; margin-right: 5rem; }
+
 .mx-16rem { margin: 0 16rem; }
 
 .my-2rem { margin-top: 2rem; margin-bottom: 2rem; }
